--- a/app/src/main/res/layout/fragment_new_node.xml
+++ b/app/src/main/res/layout/fragment_new_node.xml
@@ -56,6 +56,7 @@
 
             <TextView
                 android:id="@+id/category"
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -77,7 +78,7 @@
                 android:background="@drawable/textview_border"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/commons_regular"
+                android:fontFamily="@font/commons_demi_bold"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center_vertical"
                 android:hint="@string/category"
@@ -113,7 +114,7 @@
                 android:background="@drawable/textview_border"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/commons_regular"
+                android:fontFamily="@font/commons_demi_bold"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center_vertical"
                 android:hint="@string/subway"
@@ -156,7 +157,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/app_main_color"
-                    android:fontFamily="@font/commons_regular"
+                    android:fontFamily="@font/commons_demi_bold"
                     android:inputType="textCapSentences"
                     android:textColor="@color/app_main_color"
                     android:textColorHint="@color/app_main_color"
@@ -196,7 +197,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/app_main_color"
-                    android:fontFamily="@font/commons_regular"
+                    android:fontFamily="@font/commons_demi_bold"
                     android:inputType="textMultiLine|textCapSentences"
                     android:textColor="@color/app_main_color"
                     android:textColorHint="@color/app_main_color"
@@ -236,7 +237,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/app_main_color"
-                    android:fontFamily="@font/commons_regular"
+                    android:fontFamily="@font/commons_demi_bold"
                     android:inputType="number"
                     android:textColor="@color/app_main_color"
                     android:textColorHint="@color/app_main_color"
@@ -276,7 +277,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/app_main_color"
-                    android:fontFamily="@font/commons_regular"
+                    android:fontFamily="@font/commons_demi_bold"
                     android:inputType="textMultiLine"
                     android:textColor="@color/app_main_color"
                     android:textColorHint="@color/app_main_color"
@@ -316,7 +317,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/app_main_color"
-                    android:fontFamily="@font/commons_regular"
+                    android:fontFamily="@font/commons_demi_bold"
                     android:inputType="phone"
                     android:textColor="@color/app_main_color"
                     android:textColorHint="@color/app_main_color"
@@ -355,7 +356,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/app_main_color"
-                    android:fontFamily="@font/commons_regular"
+                    android:fontFamily="@font/commons_demi_bold"
                     android:inputType="phone"
                     android:textColor="@color/app_main_color"
                     android:textColorHint="@color/app_main_color"
