--- a/app/src/main/res/layout/custom_toolbar_transport.xml
+++ b/app/src/main/res/layout/custom_toolbar_transport.xml
@@ -107,6 +107,18 @@
                     android:paddingBottom="5dp">
 
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_tag_zero"
+                        android:layout_width="70dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/tag_background"
+                        android:fontFamily="@font/commons_demi_bold"
+                        android:text="Все"
+                        android:textAllCaps="false"
+                        android:textColor="@color/app_main_color"
+                        android:textSize="18sp" />
+
+                    <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_tag_first"
                         android:layout_width="150dp"
                         android:layout_height="35dp"
@@ -120,12 +132,12 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_tag_second"
-                        android:layout_width="120dp"
+                        android:layout_width="90dp"
                         android:layout_height="35dp"
                         android:layout_marginStart="10dp"
                         android:background="@drawable/tag_background"
                         android:fontFamily="@font/commons_demi_bold"
-                        android:text="Автомобиль"
+                        android:text="Аренда"
                         android:textAllCaps="false"
                         android:textColor="@color/app_main_color"
                         android:textSize="18sp" />
