--- a/app/src/main/res/layout/fragment_transport.xml
+++ b/app/src/main/res/layout/fragment_transport.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,49 +21,27 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="50dp"
         android:overScrollMode="never"
-        ads:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_list_notes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginBottom="50dp"
-                    android:overScrollMode="never"
-                    android:scrollbars="none" />
-
-                <ProgressBar
-                    android:id="@+id/progressbar"
-                    style="@style/CircularProgress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="100dp"
-                    android:layout_centerHorizontal="true"
-                    android:indeterminateTint="#411E80" />
-            </RelativeLayout>
-
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/progressView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/infinity_line_anim"
+        app:lottie_speed="2" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
