--- a/app/src/main/res/drawable/ic_liked.xml
+++ b/app/src/main/res/drawable/ic_liked.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="122.88dp"
-    android:height="107.41dp"
-    android:viewportWidth="122.88"
-    android:viewportHeight="107.41">
-  <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M60.83,17.19C68.84,8.84 74.45,1.62 86.79,0.21c23.17,-2.66 44.48,21.06 32.78,44.41c-3.33,6.65 -10.11,14.56 -17.61,22.32c-8.23,8.52 -17.34,16.87 -23.72,23.2l-17.4,17.26L46.46,93.56C29.16,76.9 0.95,55.93 0.02,29.95C-0.63,11.75 13.73,0.09 30.25,0.3C45.01,0.5 51.22,7.84 60.83,17.19L60.83,17.19L60.83,17.19z"
-      android:fillType="evenOdd"/>
+    android:width="94dp"
+    android:height="94dp"
+    android:viewportWidth="1000"
+    android:viewportHeight="1000">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M245.7,55.95c-65.79,7.54 -119.01,33.31 -161.55,77.94C-11.18,234.05 -14.95,387 74.93,495.33C90.02,513.56 497.97,945.4 500.06,945.4c2.72,-0 421.99,-445.46 433.3,-460.54c71.24,-94.29 75.64,-219.79 11.1,-315.76c-37.71,-55.94 -96.59,-95.33 -165.73,-110.21c-25.14,-5.45 -83.81,-5.45 -108.96,-0.21c-58.25,12.57 -100.15,36.04 -144.15,80.88l-25.56,26.19l-25.77,-26.19c-36.67,-37.92 -66.63,-57.41 -108.54,-71.03C330.77,57 281.53,51.97 245.7,55.95z" />
 </vector>
