--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:elevation="6dp"
+    app:layout_scrollFlags="scroll|enterAlways|snap"
     android:background="@color/app_main_color"
     app:contentInsetStart="0dp"
     app:layout_constraintTop_toTopOf="parent">
