--- a/app/src/main/res/layout/custom_toolbar_transport.xml
+++ b/app/src/main/res/layout/custom_toolbar_transport.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,15 +15,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="15dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/btn_search"
-                android:layout_width="290dp"
+                android:layout_marginEnd="25dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/iv_filter"
+                android:id="@+id/cardView"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="true"
@@ -42,8 +48,9 @@
 
 
                 <EditText
+                    android:layout_marginEnd="10dp"
                     android:id="@+id/et_search"
-                    android:layout_width="220dp"
+                    android:layout_width="210dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="35dp"
                     android:layout_marginTop="2dp"
@@ -71,18 +78,21 @@
             </androidx.cardview.widget.CardView>
 
             <ImageView
+                android:layout_marginEnd="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 android:id="@+id/iv_filter"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="10dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_filter" />
+                android:src="@drawable/ic_filter"
+                tools:layout_editor_absoluteX="220dp"
+                tools:layout_editor_absoluteY="6dp" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <HorizontalScrollView
