--- a/app/src/main/res/layout/fragment_policy.xml
+++ b/app/src/main/res/layout/fragment_policy.xml
@@ -1,134 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/main_background"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="2mm"
-        android:layout_marginTop="2mm"
-        android:fontFamily="@font/opensans_bold"
-        android:text="Политика конфиденциальности:"
-        android:textColor="@color/app_main_color"
-        android:textSize="18sp" />
-
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/app_main_color"
+        android:elevation="10dp"
+        app:elevation="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.Toolbar
+            app:navigationIcon="@drawable/ic_back"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            android:background="@color/app_main_color"
+            android:elevation="6dp"
+            app:contentInsetStart="0dp">
+
+
+            <TextView
+                android:id="@+id/custom_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/commons_bold"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                tools:text="Конфиденциальность" />
+
+
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="1mm"
-            android:layout_marginRight="2mm"
-            android:text="Этот текст используется для информирования пользователя о политике в отношении сбора, использования и раскрытия Личной информации, если кто-либо решил использовать наше приложение.
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/commons_demi_bold"
+                android:text="Политика конфиденциальности:"
+                android:textColor="@color/app_main_color"
+                android:textSize="18sp" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Данное предписание предназначено для информирования пользователя о политике в отношении сбора, использования и раскрытия Личной информации, если кто-либо решил использовать наше приложение.
 Если вы решите использовать наше приложение, то вы соглашаетесь на сбор и использование информации в отношении этой политики. Личная информация, которую Мы собираем, используется для предоставления и улучшения Сервиса. Мы не будем использовать или передавать вашу информацию кому-либо, кроме случаев, описанных в настоящей Политике конфиденциальности.
 Термины, используемые в настоящей Политике конфиденциальности, имеют то же значение, что и в наших Положениях и условиях, которые доступны по адресу, если иное не определено в настоящей Политике конфиденциальности."
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="1mm"
-            android:layout_marginRight="2mm"
-            android:text="Для удобства использования нашего приложения может потребоваться от вас предоставления определенной личной информации, а именно : &quot;ФИО, номер телефона, электронная почта, личное фото(не обязательно)&quot;. Информация, которую вы предоставили, будет храниться в закрытой базе данных, к которой имеет доступ только разработчик и используется, как описано в этой политике конфиденциальности."
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Для удобства использования нашего приложения может потребоваться от вас предоставления определенной личной информации, а именно : &quot;ФИО, номер телефона, электронная почта, личное фото(не обязательно)&quot;. Информация, которую вы предоставили, будет храниться в закрытой базе данных, к которой имеет доступ только разработчик и используется, как описано в этой политике конфиденциальности."
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="1mm"
-            android:layout_marginRight="2mm"
-            android:text="Приложение использует сторонние сервисы, которые могут собирать информацию, используемую для вашей идентификации.
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Приложение использует сторонние сервисы, которые могут собирать информацию, используемую для вашей идентификации.
 Ссылка на политику конфиденциальности сторонних поставщиков услуг, используемых приложением:"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginRight="2mm"
-            android:text="Сервисы Google Play"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Сервисы Google Play"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Google Firestore Cloud"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginRight="2mm"
-            android:text="Google Analytics для Firebase"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Google Analytics для Firebase"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginRight="2mm"
-            android:text="Firebase Crashlytics"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Firebase Crashlytics"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="1mm"
-            android:layout_marginRight="2mm"
-            android:text="Мы можем нанимать сторонние компании и частных лиц по следующим причинам:
+            <TextView
+                android:layout_marginRight="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Мы можем нанимать сторонние компании и частных лиц по следующим причинам:
 Для облегчения нашего Сервиса;
 Для предоставления Сервиса от нашего имени;
 Для оказания услуг, связанных с Сервисом;
 Чтобы помочь нам в анализе использования нашего Сервиса."
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="1mm"
-            android:layout_marginRight="2mm"
-            android:text="Мы ценим ваше доверие к предоставлению нам вашей личной информации, поэтому мы стремимся использовать коммерчески приемлемые средства ее защиты. Но помните, что ни один метод передачи через Интернет или метод электронного хранения не является на 100% безопасным и надежным, и Мы не можем гарантировать его абсолютную безопасность."
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_marginRight="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Мы ценим ваше доверие к предоставлению нам вашей личной информации, поэтому мы стремимся использовать коммерчески приемлемые средства ее защиты. Но помните, что ни один метод передачи через Интернет или метод электронного хранения не является на 100% безопасным и надежным, и Мы не можем гарантировать его абсолютную безопасность."
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="1mm"
-            android:layout_marginRight="2mm"
-            android:text="Мы можем время от времени обновлять нашу Политику конфиденциальности. Таким образом, вам рекомендуется периодически просматривать эту страницу на предмет изменений. Мы уведомим вас о любых изменениях, разместив новую Политику конфиденциальности на этой странице."
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Мы можем время от времени обновлять нашу Политику конфиденциальности. Таким образом, вам рекомендуется периодически просматривать эту страницу на предмет изменений. Мы уведомим вас о любых изменениях, разместив новую Политику конфиденциальности на этой странице."
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2mm"
-            android:layout_marginTop="1mm"
-            android:layout_marginRight="2mm"
-            android:layout_marginBottom="2mm"
-            android:text="Эта политика действует с 2021-04-04.
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="70dp"
+                android:fontFamily="@font/commons_regular"
+                android:text="Эта политика действует с 2021-04-04.
 Если у вас есть какие-либо вопросы или предложения относительно нашей Политики конфиденциальности, не стесняйтесь обращаться к нам. Способ обращения указан в разделе &quot;О программе&quot;, перейти к которой можно в главном экране.
 Спасибо."
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
 
-    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
