--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -1,265 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main_background">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EFEFEF"
+        android:background="@color/app_main_color"
         android:elevation="10dp"
         app:elevation="10dp">
 
-        <include layout="@layout/custom_toolbar_back" />
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/custom_toolbar_services" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ads:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="50dp"
+        android:overScrollMode="never"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/progressView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/infinity_line_anim"
+        app:lottie_speed="2" />
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="11mm"
-                android:layout_marginLeft="0.5mm">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/btn_search"
-                    style="@style/MyCardViewStyle"
-                    android:layout_width="47mm"
-                    android:layout_height="8mm"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="10dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    app:cardElevation="5dp">
-
-                    <EditText
-                        android:id="@+id/et_search_services"
-                        android:layout_width="43mm"
-                        android:layout_height="8mm"
-                        android:layout_marginLeft="1mm"
-                        android:background="@android:color/transparent"
-                        android:backgroundTint="@color/app_main_color"
-                        android:drawableLeft="@drawable/icon_search"
-                        android:hint="  Поиск"
-                        android:imeOptions="actionSearch"
-                        android:inputType="textCapWords"
-                        android:textColor="@color/black"
-                        android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="16sp" />
-
-
-                    <ImageView
-                        android:id="@+id/iv_clear"
-                        android:layout_width="3mm"
-                        android:layout_height="3mm"
-                        android:layout_gravity="right"
-                        android:layout_marginTop="2.5mm"
-                        android:layout_marginRight="1mm"
-                        android:clickable="true"
-                        android:contentDescription="TODO"
-                        android:focusable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:src="@drawable/ic_clear" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_metro"
-                    style="@style/MyCardViewStyle"
-                    android:layout_width="8mm"
-                    android:layout_height="8mm"
-                    android:layout_marginLeft="3mm"
-                    android:layout_marginTop="10dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    app:cardElevation="4dp">
-
-                    <ImageView
-                        android:layout_width="5mm"
-                        android:layout_height="5mm"
-                        android:layout_gravity="center"
-                        android:clickable="false"
-                        android:contentDescription="TODO"
-                        android:src="@drawable/metro" />
-
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="10mm">
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_services_first"
-                            android:layout_width="20mm"
-                            android:layout_height="7mm"
-                            android:layout_marginLeft="2mm"
-                            android:layout_marginTop="0.7mm"
-                            android:layout_marginBottom="1mm"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="6dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/first_cat" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="Документ"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_services_second"
-                            android:layout_width="25mm"
-                            android:layout_height="7mm"
-                            android:layout_marginLeft="2mm"
-                            android:layout_marginTop="0.7mm"
-                            android:layout_marginBottom="1mm"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="6dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/first_cat" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="Кредит, Займы"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_services_third"
-                            android:layout_width="30mm"
-                            android:layout_height="7mm"
-                            android:layout_marginLeft="2mm"
-                            android:layout_marginTop="0.7mm"
-                            android:layout_marginBottom="1mm"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="6dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/first_cat" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="Обучение языкам"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_services_fourth"
-                            android:layout_width="30mm"
-                            android:layout_height="7mm"
-                            android:layout_marginLeft="2mm"
-                            android:layout_marginTop="0.7mm"
-                            android:layout_marginRight="2mm"
-                            android:layout_marginBottom="1mm"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="6dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/first_cat" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="Рестораны, кафе"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-                </ScrollView>
-            </HorizontalScrollView>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ProgressBar
-                    android:id="@+id/progressbar"
-                    style="@style/CircularProgress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:indeterminateTint="#411E80" />
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view_services"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="0.5mm"
-                    android:layout_marginTop="1mm"
-                    android:layout_marginRight="0.6mm" />
-
-            </RelativeLayout>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
