--- a/app/src/main/res/layout/fragment_work.xml
+++ b/app/src/main/res/layout/fragment_work.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_background"
-    android:orientation="vertical">
+    android:background="@color/main_background">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -26,9 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="50dp"
         android:overScrollMode="never"
         android:paddingStart="5dp"
+        android:layout_marginBottom="50dp"
         android:paddingEnd="5dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
