added edit nodes fragment

--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -70,7 +70,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/app_main_color"
-            android:fontFamily="@font/commons_regular"
+            android:fontFamily="@font/commons_demi_bold"
             android:inputType="phone"
             android:textSize="16sp"
             android:textColor="@color/app_main_color"
@@ -92,7 +92,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/app_main_color"
-            android:fontFamily="@font/commons_regular"
+            android:fontFamily="@font/commons_demi_bold"
             android:inputType="textPassword"
             android:textSize="16sp"
             android:textColor="@color/app_main_color"
