--- a/app/src/main/res/layout/fragment_edit_my_nodes.xml
+++ b/app/src/main/res/layout/fragment_edit_my_nodes.xml
@@ -366,7 +366,6 @@
 
 
             <androidx.recyclerview.widget.RecyclerView
-                android:overScrollMode="never"
                 android:id="@+id/list_images"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -429,14 +428,14 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_add_new_ad"
+                android:id="@+id/btn_accept"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_background"
                 android:fontFamily="@font/commons_bold"
-                android:text="@string/publicate"
+                android:text="@string/accept"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="18sp"
