--- a/app/src/main/res/layout/fragment_health.xml
+++ b/app/src/main/res/layout/fragment_health.xml
@@ -25,7 +25,8 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="50dp"
+        android:clipToPadding="false"
+        android:paddingBottom="90dp"
         android:fadeScrollbars="true"
         android:overScrollMode="never"
         android:paddingStart="5dp"
