--- a/app/src/main/res/layout/fragment_house.xml
+++ b/app/src/main/res/layout/fragment_house.xml
@@ -26,7 +26,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:overScrollMode="never"
-        android:layout_marginBottom="50dp"
+        android:clipToPadding="false"
+        android:paddingBottom="90dp"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
