--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,9 +2,9 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="@color/main_background">
+    android:background="@color/main_background"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -24,10 +24,10 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            android:layout_marginBottom="70dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="90dp"
             android:orientation="vertical">
 
 
@@ -43,21 +43,21 @@
 
 
             <HorizontalScrollView
-                android:overScrollMode="never"
-                android:scrollbarThumbVertical="@null"
-                android:scrollbarThumbHorizontal="@null"
                 android:layout_width="wrap_content"
                 android:layout_height="140dp"
+                android:overScrollMode="never"
+                android:scrollbarThumbHorizontal="@null"
+                android:scrollbarThumbVertical="@null"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
                 <ScrollView
-                    android:overScrollMode="never"
-                    android:scrollbarThumbVertical="@null"
-                    android:scrollbarThumbHorizontal="@null"
                     android:id="@+id/nestedScrollView"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:scrollIndicators="none">
+                    android:overScrollMode="never"
+                    android:scrollIndicators="none"
+                    android:scrollbarThumbHorizontal="@null"
+                    android:scrollbarThumbVertical="@null">
 
                     <include
                         android:id="@+id/category"
@@ -75,16 +75,16 @@
                 android:textSize="22sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:overScrollMode="never"
                 android:id="@+id/recycler_view_vip"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:overScrollMode="never" />
 
             <TextView
-                android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="5dp"
                 android:fontFamily="@font/commons_bold"
                 android:text="Недавние объявления:"
@@ -97,27 +97,27 @@
 
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:overScrollMode="never"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp" />
-
-                <com.airbnb.lottie.LottieAnimationView
-                    android:visibility="invisible"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginRight="5dp"
+                    android:overScrollMode="never"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/progressView"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:visibility="invisible"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:lottie_autoPlay="true"
                     app:lottie_loop="true"
                     app:lottie_rawRes="@raw/infinity_line_anim"
