--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -21,6 +21,7 @@
 
 
     <androidx.core.widget.NestedScrollView
+        android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -103,7 +104,7 @@
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/app_main_color"
-                        android:fontFamily="@font/commons_regular"
+                        android:fontFamily="@font/commons_demi_bold"
                         android:inputType="textCapSentences"
                         android:textColor="@color/app_main_color"
                         android:textColorHint="@color/app_main_color"
@@ -127,7 +128,7 @@
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/app_main_color"
-                        android:fontFamily="@font/commons_regular"
+                        android:fontFamily="@font/commons_demi_bold"
                         android:inputType="textCapSentences"
                         android:textColor="@color/app_main_color"
                         android:textColorHint="@color/app_main_color"
@@ -153,7 +154,7 @@
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/app_main_color"
-                        android:fontFamily="@font/commons_regular"
+                        android:fontFamily="@font/commons_demi_bold"
                         android:inputType="phone"
                         android:textColor="@color/app_main_color"
                         android:textColorHint="@color/app_main_color"
@@ -178,7 +179,7 @@
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/app_main_color"
-                        android:fontFamily="@font/commons_regular"
+                        android:fontFamily="@font/commons_demi_bold"
                         android:inputType="textPassword"
                         android:textColor="@color/app_main_color"
                         android:textColorHint="@color/app_main_color"
@@ -201,7 +202,7 @@
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/app_main_color"
-                        android:fontFamily="@font/commons_regular"
+                        android:fontFamily="@font/commons_demi_bold"
                         android:inputType="textEmailSubject"
                         android:textColor="@color/app_main_color"
                         android:textColorHint="@color/app_main_color"
