--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -28,7 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="50dp"
+        android:clipToPadding="false"
+        android:paddingBottom="90dp"
         android:overScrollMode="never"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
