--- a/app/src/main/res/layout/fragment_work.xml
+++ b/app/src/main/res/layout/fragment_work.xml
@@ -27,7 +27,8 @@
         android:layout_marginRight="5dp"
         android:overScrollMode="never"
         android:paddingStart="5dp"
-        android:layout_marginBottom="50dp"
+        android:clipToPadding="false"
+        android:paddingBottom="90dp"
         android:paddingEnd="5dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
