--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -365,6 +365,8 @@
                     android:src="@drawable/ic_call" />
 
                 <TextView
+                    android:longClickable="true"
+                    android:textIsSelectable="true"
                     android:id="@+id/tv_detail_phone_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -401,6 +403,8 @@
                     android:src="@drawable/ic_whatsapp_colorful" />
 
                 <TextView
+                    android:longClickable="true"
+                    android:textIsSelectable="true"
                     android:id="@+id/tv_detail_phone_number_whatsapp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
